# CheML

./: .dockerignore  .gitignore  Dockerfile  README.md  ay.ipynb  docker-compose.yml  pyproject.toml
.ctx-pytest-full/test_audit_schemas_cli_writes_0/: schema.csv
.ctx-pytest-full/test_evaluate_runs_writes_one_0/: gold.parquet
.ctx-pytest-full/test_evaluation_is_blocked_bef0/: manifest.json
.ctx-pytest-full/test_local_column_gold_can_rea0/: evaluation.json  evaluation_metrics.csv  manifest.json  prediction.json
.ctx-pytest-full/test_parquet_gold_is_filtered_0/: train-00000-of-00001.parquet
.ctx-pytest-full/test_run_workspace_gets_only_r0/: output-schema.json
docs/: architecture.md  contracts.md
metrics/: metrics_benzimidazole_from_predictions.csv  metrics_cocrystals_from_predictions.csv  metrics_complexes_from_predictions.csv  metrics_oxazolidinone_from_predictions.csv  prediction_metrics_summary.csv
runs/: .main_runner_stopped_after_technetium
runs/20260627T060425421078Z-benzimidazole-triazole-hybrids-as-antimicrobial-/: bundle.json  evaluation.json  (+1 more)
scripts/: download_datalab_cache.mjs  download_datalab_cache.py  download_molscribe_model.py  molscribe_predict.py  ollama_serve.sh  verify_bundles.py  write_prediction_chemical_metrics.py
tests/: test_bundle.py  test_cli.py  test_docker_models.py  test_domains.py  test_evaluate.py  test_model_downloads.py  test_normalize.py  test_ollama_adapter.py  test_pipeline.py  test_prediction_chemical_metrics.py  test_runner.py  test_tesseract_ocr.py  test_toolchain.py  test_ui.py  test_validation.py
(+214 files in other folders)
