[project]
name = "chemx-article-parser"
version = "0.1.0"
description = "Reproducible ChemX article extraction pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
  "marker-pdf>=1.2",
  "pydantic>=2.10,<3",
  "pymupdf>=1.24,<2",
  "pymupdf-layout",
  "rdkit>=2024.3",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
gold = ["openpyxl>=3.1", "pandas>=2.2", "pyarrow>=18"]
ui = ["pandas>=2.2", "streamlit>=1.42"]
dev = ["pytest>=8.3", "ruff>=0.9"]

[project.scripts]
chemx = "chemx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chemx"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".codex-home",
  ".codex-cache",
  "runs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
